Bug 162690 - URLParser should ignore extra slashes after scheme:// and handle a missing slash after the port
Summary: URLParser should ignore extra slashes after scheme:// and handle a missing sl...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Alex Christensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-28 10:51 PDT by Alex Christensen
Modified: 2016-09-28 14:17 PDT (History)
0 users

See Also:


Attachments
Patch (4.21 KB, patch)
2016-09-28 10:52 PDT, Alex Christensen
ggaren: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Christensen 2016-09-28 10:51:12 PDT
URLParser should ignore extra slashes after scheme:// and handle a missing slash after the port
Comment 1 Alex Christensen 2016-09-28 10:52:00 PDT
Created attachment 290101 [details]
Patch
Comment 2 Geoffrey Garen 2016-09-28 12:41:29 PDT
Comment on attachment 290101 [details]
Patch

r=me
Comment 3 Alex Christensen 2016-09-28 14:17:17 PDT
http://trac.webkit.org/changeset/206548