URLParser should ignore extra slashes after scheme:// and handle a missing slash after the port https://bugs.webkit.org/show_bug.cgi?id=162690

Reviewed by Geoffrey Garen.

Source/WebCore:

Covered by new API tests.

* platform/URLParser.cpp:
(WebCore::URLParser::parse):

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):



Canonical link: https://commits.webkit.org/180640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206548 268f45cc-cd09-0410-ab3c-d52691b4dbfc